# Klinik_FrontDesk

./: .gitignore  COMPLETE_IMPLEMENTATION_HISTORY.md  ERD.md  FSD_Klinik_Admin.md  Klinik_Admin_Collection.json  PRD_Klinik_Admin.md  README.md  VULNERABILITY_REPORT.md  add_pharmacist_nik.py  bandit_report.json  bench_start_guide.md  check_pharmacist_table.py  debug_auth.py  debug_patient_join.py  debug_queue.py  debug_queue_today.py  deploy_backend.ps1  deploy_frontend.ps1  deploy_gitlab.ps1  drop_concoctions_table.py  fix_db_migration.py  fix_medicine_data.py  fix_missing_patient.py  full_test_suite.py  implementation_plan.md  inspect_appointments_v1.py  klinik.db  migrate_batches.py  migrate_concoctions.py  migration_insurance.sql  pyproject.toml  reset_appointment_table.py  reset_users.py  restore_medicine_names.py  seed_medicines.py  seed_pharmacists.py  start_application.bat  task.md  test_conn.py  test_kfa.py  (+3 more)
JMeter/: Klinik_Load_Test_CSV.jmx  patients_data.csv
backend/: add_created_at.py  auth_utils.py  check_db.py  check_doctors.py  check_frappe.py  check_frappe_env.py  check_live_server.py  check_queue_api.py  database.py  debug_queue.py  debug_startup.py  delete_doctors.py  dependencies.py  fix_users.py  hooks.py  init_config_db.py  main.py  migrate_dosage.py  models.py  modules.txt  requirements.txt  reset_users.py  scheduler.py  schemas.py  seed_data.py  seed_doctors.py  seed_issuers.py  seed_patients_real.py  start_server.bat  sync_doctors_to_satusehat.py  sync_patients.py  sync_patients_to_satusehat.py  test_frappe_connection.py
frontend/: fix_deps.bat  (+4 more)
(+92 files in other folders)
