[project]
name = "api_clinic"
authors = [
    { name = "clinic", email = "clinic@gmail.com" }
]
description = "backend clinic app"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "frappe"
]

[tool.setuptools.package-data]
api_clinic = ["*/*.json", "*/*.html", "*/*.txt", "*/*.js", "*/*.css", "*/*.png", "*/*.svg", "*/*.md", "*/*.csv"]

[project.urls]
Homepage = "https://gitlab.com/frappe-klinik/api-clinic"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
